--- a/UnitTestSample01.Test/UnitTestSample01.Test.csproj
+++ b/UnitTestSample01.Test/UnitTestSample01.Test.csproj
@@ -60,6 +60,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UnitTestSample01\UnitTestSample01.csproj">
+      <Project>{7006BDED-DBB6-49A6-91C0-B66B046EC8E7}</Project>
+      <Name>UnitTestSample01</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
